# turkish-folk-songs-map

./: README.md  README.tr.md  app.js  index.html  pyproject.toml  scraper.py  songs.json  songs.jsonl  styles.css
